--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "delivery-hero-fe-case",
   "version": "1.0.0",
-  "repository": "git@github.com:ErenHncr/DeliveryHeroFECase.git",
+  "repository": "git@github.com:ErenHncr/digifist-case.git",
+  "homepage": "https://erenhncr.github.io/digifist-case",
   "author": "erenhncr <erenhncr@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
     "start": "parcel public/index.html --open",
-    "build": "parcel build public/index.html"
+    "build": "parcel build public/index.html",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.6.2",
@@ -17,6 +20,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "parcel": "^2.6.2",
     "process": "^0.11.10"
   },
