--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "2.6.2",
+    "@parcel/transformer-sass": "2.6.0",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
@@ -21,7 +21,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
-    "parcel": "^2.6.2",
+    "parcel": "2.6.0",
     "process": "^0.11.10"
   },
   "dependencies": {
