--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "parcel public/index.html --open",
     "build": "parcel build public/index.html",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.6.0",
