--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "start": "parcel public/index.html --open",
-    "build": "parcel build public/index.html",
+    "build": "parcel build public/index.html --public-url ./",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
